browsable resource packs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,13 +20,16 @@ nav:
   - General: index.md
   - Rewards: rewards/index.md
   - FAQ: faq/index.md
-  - Resource Pack (optional): resource-pack/index.md
+  - Resource Packs: resource-packs/index.md
   - Support: support/index.md
 
 markdown_extensions:
   - attr_list  # For button styling
   - admonition
   - md_in_html
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.superfences
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
